--- a/rn25-hoannt/src/App.css
+++ b/rn25-hoannt/src/App.css
@@ -7,12 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -27,13 +21,13 @@
 .App-link {
   color: #61dafb;
 }
-.title_header {
+/* .title_header {
   border: 1px solid black;
   color:red;
   background-color: #aaaeae;
   text-align: center;
   min-height: 5rem;
-}
+} */
 .mainImage {
   width: 400px;
   height: 400px;
@@ -73,11 +67,5 @@
     min-height: 5rem;
     font-size: 15px;
     padding-top: 0.75rem;
-  }
-}
-@media (min-width: 768px){
-.col-md-3 {
-    flex: 0 0 auto;
-    width: 100% !importan;
   }
 }
